# scribes

./: .gitignore  .readthedocs.yml  README.md  mkdocs.yml  tasks.py
.github/workflows/: doc.yml
backend/: pyproject.toml  setup.py
backend/dbschema/: schema.esdl
backend/scribes/api/: app.py
backend/scribes/database/: database_filler.py  edgedb_client.py  scribes_client.py
backend/scribes/models/: __init__.py  models.py
backend/tests/database/: test_edgedb_client.py
backend/tests/database/utils/: edgedb_test_container.py
deploy/: docker-compose.yaml
docs/: about.md  api.md  ci_cd.md  database.md  deployment.md  index.md  project.md  requirements.txt
front/: package-lock.json  package.json
front/blueprints/: blueprint_XD.md
front/src/: App.vue  main.js
front/src/components/: CollapsedCollationViewer.vue  CollationChoices.vue  CollationViewer.vue  ManuscriptSelector.vue  SynopticChoices.vue  SynopticViewer.vue  TextDisplay.vue
maquettes_front/: Maquette_XD.txt
