[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scribes"
version = "0.0.0"
description = "Python libraries for SCRIBES project"
authors = [{ name = "SCRIBES team", email = "sophie.robert@atos.net" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["fastapi==0.76.0", "edgedb==0.23.0"]
